--- a/src/app/assure/dashboard/dashboard.component.html
+++ b/src/app/assure/dashboard/dashboard.component.html
@@ -32,8 +32,9 @@
         </li>
 
         <!-- Paiement -->
+
         <li>
-          <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
+          <a [routerLink]="['/dashboard-assure', 'mesRecu']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
             <i class="fas fa-credit-card w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
             <span class="flex-1 ms-3 whitespace-nowrap">Paiement</span>
           </a>
